feat: facility halt/resume; tick error broadcast; fix trade fee and session routing
- FacilityService: skip halted facilities during production; Portfolio.toggleHalt
- FacilityController: POST /api/facility/toggle-halt
- MarketTickPayload: add tickError field; MarketEngine catch broadcasts error to client
- SessionUpdate: add haltedFacilities; MarketEngine pushes it per session each tick
- TradeService: correct fee calculation (was 3%, now 0.5% per PlayerClass)
- TradeServiceTest: update expected values to match corrected fee
- Various service/controller cleanups and method-reference stream improvements

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>